--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,31 @@
     transform: rotate(360deg);
   }
 }
+
+.NavBar {
+  font-size: 50px;
+  background-color: #3dc4fc;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.BeerItem {
+  display: flex;
+  justify-content: left;
+}
+
+h1 {
+  display: flex;
+  justify-content: left;
+  padding-left: 1.5em;
+}
+
+.h2 {
+}
+
+.p {
+}
+
+.BeerItem img {
+  height: 400px;
+}
